@@ -179,7 +179,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added blank special page Special:BlankPage for benchmarking, etc.
 * Foreign repo file descriptions and thumbnails are now cached.
 * (bug 11732) Allow localisation of edit button images
- 
+* Allow the search box, toolbox and languages box in the Monobook sidebar to be
+  moved around arbitrarily using special sections in [[MediaWiki:Sidebar]]: 
+  SEARCH, TOOLBOX and LANGUAGES
+
+
 === Bug fixes in 1.13 ===
 
 * (bug 10677) Add link to the file description page on the shared repository
